k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebank-quarkus-cqrs
  labels:
    name: ebank-quarkus-cqrs
    istio-injection: disabled
